files/gitlab/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: docker.io/gitlab/gitlab-ce:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
            - name: registry
              containerPort: 5487
            - name: ssh
              containerPort: 22
          volumeMounts:
            - name: gitlab
              mountPath: /etc/gitlab
              subPath: config
            - name: gitlab
              mountPath: /var/opt/gitlab
              subPath: data
            - name: gitlab-backups
              mountPath: /var/opt/gitlab/backups
            - name: gitlab-log
              mountPath: /var/log/gitlab
      volumes:
        - name: gitlab-log
          persistentVolumeClaim:
            claimName: gitlab-log
        - name: gitlab
          hostPath:
            type: DirectoryOrCreate
            path: "/srv/gitlab"
        - name: gitlab-backups
          hostPath:
            type: DirectoryOrCreate
            path: "/srv/gitlab/backup"

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - name: web
      protocol: TCP
      port: 80
    - name: registry
      protocol: TCP
      port: 5487

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh
  labels:
    app: gitlab
spec:
  # type: LoadBalancer
  selector:
    app: gitlab
  ports:
    - name: ssh
      protocol: TCP
      port: 2222
      targetPort: ssh
  externalIPs:
    - 10.20.30.11

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitlab-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: gitlab.10.20.30.11.xip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitlab-registry
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: registrysecure
spec:
  rules:
    - host: registry.10.20.30.11.xip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 5487
